# specparam-rs

./: 10.bootstrap.js  Cargo.toml  README.rst  bootstrap.js  index.html  index.js  package-lock.json  package.json  simulator.html  webpack.config.js
examples/: 01_performance_test.ipynb
src/: curves.rs  gen.rs  lib.rs  main.rs  mod.rs  optimization.rs  optimizers.rs  specparam.rs
