[package]
name = "specparam-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = { version = "0.15.0", features = ["blas"] }
ndarray-stats = { version = "0.5.1" }
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
finitediff = { version = "0.1.4", features = ["ndarray"]}
argmin = { version = "0.7" }
argmin-math = { version = "0.2", features = ["ndarray_latest-serde"] }
argmin_testfunctions = { version = "0.1.1" }
rand = { version = "0.8.5" }
rand_distr = { version = "0.4.3" }
pyo3 = { version = "0.19.1" }
numpy = { version = "0.19" }

[package.metadata.maturin]
name = "specparam"

[lib]
name = "specparam"
crate-type = ["cdylib"]
