[package]
name = "specparam-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = { version = "0.15.0" }
finitediff = { version = "0.1.4", features = ["ndarray"] }
argmin = { version = "0.7", features = ["wasm-bindgen"] }
argmin-math = { version = "0.2", features = ["ndarray_v0_15-nolinalg-serde"] }
wasm-bindgen = "0.2.84"
js-sys = "0.3.64"
rand = "0.8.2"
rand_distr = "0.4.3"
web-sys = { version = "0.3.64", features = [ "console" ] }

[lib]
name = "specparam"
crate-type = ["cdylib"]

